syntax = "proto3";

package shippingpb;

option go_package = "backend/pb/shippingpb";

service ShippingService {
  rpc Ship(ShipRequest) returns (ShipResponse);
  rpc CancelShipping(CancelShipRequest) returns (CancelShipResponse);
}

message ShipRequest {
  string address = 1;
}

message ShipResponse {
  string shipping_id = 1;
  string status = 2;
}

message CancelShipRequest {
  string shipping_id = 1;
}

message CancelShipResponse {
  string status = 1;
}
